--- a/index.html
+++ b/index.html
@@ -56,7 +56,20 @@
     </div>
 
     <div class="quote">
-        <div>"The predecessors will never meet their ancestors, the successors will never meet their descendants. Leisurely studying Heaven and Earth, and yet alone and inferior"</div>
+        "Fear and desire hold the power to disrupt one's rythm. Desire cloud's one vision, while fear still's one's step."
+        <div>- Meruem, Hunter x Hunter</div>
+    </div>
+
+    <div class="call">
+        <div class="call-texts">
+            <p class="call-t1">Call to action! Click the button!</p>
+            <p class="class-t2">Sign up by clicking on the trustworhty button!</p>
+        </div>
+        <button>Sign up</button>
+    </div>
+
+    <div class="copyright">
+        Copyright © Mateus de Abreu
     </div>
 </body>
 </html>
